# aitchitecture-canvas

./: .gitignore  AGENT.md  README.md
mvp/: Makefile  (+2 more)
mvp/apps/api/: Dockerfile  alembic.ini  pyproject.toml
mvp/apps/api/fixtures/llm/: README.md  adr_draft-default.json  architect-00d0c2b4.json  architect-17559eca.json  architect-default.json  bootstrap_intake-default.json  bootstrap_sketch-default.json  judge-default.json
mvp/apps/api/migrations/: env.py
mvp/apps/api/migrations/versions/: 0001_initial.py  0002_diagrams.py  0003_simulation_runs.py  0004_intake_optional.py  0005_corpus.py  0006_judge.py  0007_architect.py  0008_exports.py  0009_archetype_descriptions.py  0010_layered_guardrails.py  0011_guardrail_engines.py  0012_guardrails_always_fail_closed.py
mvp/apps/api/src/blueprint/: auth.py  catalog.py  main.py  objstore.py  queue.py  seed.py  settings.py  worker.py
mvp/apps/api/src/blueprint/architect/: bootstrap.py  diff.py
mvp/apps/api/src/blueprint/corpus/: ingest.py  parser.py  search.py
mvp/apps/api/src/blueprint/db/: __init__.py
mvp/apps/api/src/blueprint/exports/: adr.py  mermaid.py
mvp/apps/api/src/blueprint/judges/: run.py  schemas.py  serialize.py
mvp/apps/api/src/blueprint/llm/: __init__.py  base.py  mock.py  parse.py
mvp/apps/api/tests/: conftest.py  test_architect_diff.py  test_architect_flow.py  test_corpus_parser.py  test_corpus_search_api.py  test_diagrams.py  test_exports.py  test_judge_flow.py  test_judge_schemas.py  test_llm_mock.py  test_mermaid_export.py  test_settings.py  test_simulation.py  test_simulation_api.py
(+217 files in other folders)
