[project]
name = "blueprint"
version = "0.1.0"
description = "Blueprint MVP — canvas de arquitetura com IA (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3.6",
    "redis>=5.2",
    "arq>=0.26",
    "httpx>=0.28",
    "sse-starlette>=2.2",
    "boto3>=1.43.49",
    "python-frontmatter>=1.3.0",
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
